[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/entities/player.gd" type="Script" id=2]
[ext_resource path="res://assets/helth_ov.png" type="Texture" id=5]
[ext_resource path="res://assets/montserrat_extrabold.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.733333, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.470588, 0.00784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.733333, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HP/overSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6.428, 0.827 ), Vector2( 6.778, 1.227 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 264, 416 )
collision_mask = 4
script = ExtResource( 2 )

[node name="player" type="Sprite" parent="."]
position = Vector2( -5.00679e-06, -16.0595 )
scale = Vector2( 0.833333, 0.832094 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="ObstacleDetect" type="Area2D" parent="."]
position = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetect"]
position = Vector2( -4, -12 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_bottom = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_top = 0.3
drag_margin_right = 0.1
drag_margin_bottom = 0.3
editor_draw_drag_margin = true

[node name="HP" type="Node2D" parent="."]
position = Vector2( -128, -96 )

[node name="overSprite" type="Sprite" parent="HP"]
position = Vector2( 127.47, 16 )
scale = Vector2( 6.4265, 0.8 )
texture = ExtResource( 5 )

[node name="hpNormal" type="ProgressBar" parent="HP"]
margin_right = 256.0
margin_bottom = 32.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpOverload" type="ProgressBar" parent="HP"]
margin_left = -1.0
margin_right = 256.0
margin_bottom = 33.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
min_value = 100.0
max_value = 200.0
value = 150.0
allow_lesser = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpLabel" type="Label" parent="HP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 85.0
margin_top = 1.0
margin_right = 171.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 7 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
method_call_mode = 1
anims/health_over = SubResource( 8 )

[connection signal="area_entered" from="ObstacleDetect" to="." method="_on_Obstacles_entered"]
